Changed company name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  
 <head>
 
-    	<!-- Meta -->
+    	<!-- Metas -->
         <meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -344,7 +344,7 @@
             </div>
 
             <div class="sub-footer text-center">
-                <p>&copy; 2022 <b>Guru Nanank Trading Co.</b>. All Rights Reserved.</p>
+                <p>&copy; 2022 <b>Punjab Enterprises</b>. All Rights Reserved.</p>
             </div>
         </footer>
 
