--- a/about-us.html
+++ b/about-us.html
@@ -174,7 +174,7 @@ Our highly sophisticated infrastructure makes it possible for us to design and m
             </div>
 
             <div class="sub-footer text-center">
-                <p>&copy; 2022 <b>Guru Nanank Trading Co.</b>. All Rights Reserved.</p>
+                <p>&copy; 2022 <b>Punjab Enterprises</b>. All Rights Reserved.</p>
             </div>
         </footer>
 
