--- a/contact-us.html
+++ b/contact-us.html
@@ -236,7 +236,7 @@ satbirsinghsanghera@gmail.com@gmail.com</p>
             </div>
 
             <div class="sub-footer text-center">
-                <p>&copy; 2022 <b>Guru Nanank Trading Co.</b>. All Rights Reserved.</p>
+                <p>&copy; 2022 <b>Punjab Enterprises</b>. All Rights Reserved.</p>
             </div>
         </footer>
 
