--- a/engine-valves.html
+++ b/engine-valves.html
@@ -200,7 +200,7 @@ We can also provide custom design and manufacturing services for developing cust
             </div>
 
             <div class="sub-footer text-center">
-                <p>&copy; 2022 <b>Guru Nanank Trading Co.</b>. All Rights Reserved.</p>
+                <p>&copy; 2022 <b>Punjab Enterprises</b>. All Rights Reserved.</p>
             </div>
         </footer>
 
