--- a/hub-bolts.html
+++ b/hub-bolts.html
@@ -183,7 +183,7 @@ We are among the reputed organizations, deeply engaged in offering an optimum qu
             </div>
 
             <div class="sub-footer text-center">
-                <p>&copy; 2022 <b>Guru Nanank Trading Co.</b>. All Rights Reserved.</p>
+                <p>&copy; 2022 <b>Punjab Enterprises</b>. All Rights Reserved.</p>
             </div>
         </footer>
 
