--- a/piston-pins.html
+++ b/piston-pins.html
@@ -197,7 +197,7 @@ We are known as the leading piston pin manufacturers  serving both national and 
             </div>
 
             <div class="sub-footer text-center">
-                <p>&copy; 2022 <b>Guru Nanank Trading Co.</b>. All Rights Reserved.</p>
+                <p>&copy; 2022 <b>Punjab Enterprises</b>. All Rights Reserved.</p>
             </div>
         </footer>
 
