--- a/quality-policy.html
+++ b/quality-policy.html
@@ -166,7 +166,7 @@ Company verifies characteristic of its products as per defined quality plans and
             </div>
 
             <div class="sub-footer text-center">
-                <p>&copy; 2022 <b>Guru Nanank Trading Co.</b>. All Rights Reserved.</p>
+                <p>&copy; 2022 <b>Punjab Enterprises</b>. All Rights Reserved.</p>
             </div>
         </footer>
 
