--- a/valve-seat-inserts.html
+++ b/valve-seat-inserts.html
@@ -201,7 +201,7 @@ Punjab Enterprises. can also make valve seat inserts for custom applications.</p
             </div>
 
             <div class="sub-footer text-center">
-                <p>&copy; 2022 <b>Guru Nanank Trading Co.</b>. All Rights Reserved.</p>
+                <p>&copy; 2022 <b>Punjab Enterprises</b>. All Rights Reserved.</p>
             </div>
         </footer>
 
