--- a/products.html
+++ b/products.html
@@ -181,8 +181,7 @@
                                 <li><b>CONTACT :</b><br><a href="tel:+919779683435">+91 97796 83435</a>,
 								<a href="tel:+911826223179"> +91 1826  223179</a></li>
 								
-                                <li><b>EMAIL :</b><br><a href="mailto:gurunanaktradingcophr@gmail.com">gurunanaktradingcophr@gmail.com</a><br>
-								    <a href="mailto:satbirsinghsanghera@gmail.com@gmail.com">satbirsinghsanghera@gmail.com@gmail.com</a></</li> 
+                                <li><b>EMAIL :</b><br><a href="mailto:satbirsinghsanghera@gmail.com">satbirsinghsanghera@gmail.com</a></</li> 
                             </ul>
                         </div>
                     </div>
