--- a/contact-us.html
+++ b/contact-us.html
@@ -91,8 +91,7 @@
                                 <i class="ti-email"></i>
                             </span>
                             <h6>Email</h6>
-                            <p>gurunanaktradingcophr@gmail.com<br>
-satbirsinghsanghera@gmail.com@gmail.com</p>
+                            <p>satbirsinghsanghera@gmail.com</p>
                         </div>
                     </div>
  
